--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "sourceMap": true,
 
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "root/*": ["./*"]
     },
 
     "types": ["./src/env.d.ts"],
