add ssl configurations for db

--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -29,15 +29,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup deps
-        run: npm i dotenv drizzle-kit
-
       - name: Migrate
         run: | 
-          echo "POSTGRES_URL=${{secrets.DOCKER_POSTGRES_URL}}" > .env
+          export POSTGRES_URL=${{secrets.DOCKER_POSTGRES_URL}}
+          export DB_CA="${{secrets.DOCKER_DB_CA}}"
           echo "${{secrets.SSH_KEY}}" > key.pem
+          
           chmod 600 key.pem
-          chmod 600 .env
 
           # create ssh tunnel
           ssh -i key.pem -o StrictHostKeyChecking=no -L ${{secrets.MIGRATION_URL}} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} -fN 
