readd dotenv as thats needed because drizzle config uses it

--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -29,6 +29,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: deps
+        run: npm install dotenv
+
       - name: Migrate
         run: | 
           export POSTGRES_URL=${{secrets.DOCKER_POSTGRES_URL}}
