--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lfg",
+  "name": "bolha",
   "version": "1.0",
   "scripts": {
     "start": "node src/app.js",
@@ -11,44 +11,45 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "yarn db:generate && drizzle-kit migrate",
     "db:drop-migration": "drizzle-kit drop",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org lfg-2e --project api ./dist && sentry-cli sourcemaps upload --org lfg-2e --project api ./dist"
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org bolha-2e --project api ./dist && sentry-cli sourcemaps upload --org bolha-2e --project api ./dist"
   },
   "engines": {
-    "node": ">= 22.5.1"
+    "node": ">= 23.8"
   },
-  "packageManager": "yarn@4.4.0",
+  "packageManager": "yarn@4.6.0",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/client-s3": "^3.750.0",
     "@getbrevo/brevo": "^2.2.0",
     "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^5.0.0",
     "@koa/multer": "^3.0.2",
-    "@koa/router": "^12.0.1",
-    "@sentry/cli": "^2.36.1",
-    "@sentry/node": "^8.30.0",
-    "@sentry/profiling-node": "^8.30.0",
-    "argon2": "^0.40.3",
-    "dayjs": "^1.11.12",
-    "drizzle-orm": "^0.32.2",
+    "@koa/router": "^13.1.0",
+    "@sentry/cli": "^2.42.1",
+    "@sentry/node": "^9.1.0",
+    "@sentry/profiling-node": "^9.1.0",
+    "argon2": "^0.41.1",
+    "dayjs": "^1.11.13",
+    "drizzle-orm": "^0.39.3",
+    "helmet": "^8.0.0",
     "i18n": "^0.15.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "koa": "^2.15.3",
+    "koa": "^2.15.4",
     "koa-compress": "^5.1.1",
-    "koa-helmet": "^7.0.2",
+    "koa-helmet": "^8.0.1",
     "koa-passport": "^6.0.0",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pino": "^9.3.2",
-    "postgres": "^3.4.4",
+    "pg": "^8.13.3",
+    "pino": "^9.6.0",
     "sharp": "^0.33.5",
     "tsc": "^2.0.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.9.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
     "@types/i18n": "^0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9",
@@ -60,22 +61,23 @@
     "@types/koa__router": "^12",
     "@types/mime-types": "^2",
     "@types/multer": "^1",
-    "@types/node": "^22.0.2",
-    "@types/passport": "^1.0.16",
+    "@types/node": "^22.13.4",
+    "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4",
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "@typescript-eslint/parser": "^8.2.0",
-    "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.23.2",
-    "eslint": "^9.9.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@types/pg": "^8.11.11",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.4",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
-    "eslint-plugin-prettier": "^5.2.1",
-    "nodemon": "^3.1.4",
-    "prettier": "^3.3.3",
+    "eslint-plugin-prettier": "^5.2.3",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.7.3"
   }
 }
