--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org bolha-2e --project api ./dist && sentry-cli sourcemaps upload --org bolha-2e --project api ./dist"
   },
   "engines": {
-    "node": ">= 23.8"
+    "node": ">= v22.5.1"
   },
   "packageManager": "yarn@4.6.0",
   "dependencies": {
@@ -44,6 +44,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.3",
     "pino": "^9.6.0",
+    "postgres": "^3.4.5",
     "sharp": "^0.33.5",
     "tsc": "^2.0.4"
   },
